--- a/src/index.css
+++ b/src/index.css
@@ -77,7 +77,7 @@ ul {
 }
 
 body {
-  background-color: var(--raisin-black-3);
+  /* background-color: var(--raisin-black-3); */
   font-size: 1.6rem;
   line-height: 1.5;
 }
