--- a/src/style/footer.css
+++ b/src/style/footer.css
@@ -16,6 +16,7 @@
     margin-top: 20px;
     line-height: 2;
     font-size: 18px;
+    text-align:justify;
 }
 
 .footer-links a {
@@ -24,7 +25,11 @@
     transition: 0.3s;
     font-size: 18px;
     margin-left: 20px;
-    margin-top: 10px;
+}
+
+.footer-links {
+    border: none !important;
+    background: none !important;
 }
 
 .footer-links a:hover {
@@ -43,4 +48,40 @@
 
 .footer-bottom-desc {
     color: white;
+    font-size: 20px;
+}
+
+.footer-bottom-desc a:hover {
+    color: var(--marigold);
+}
+
+
+/* BreakPoints */
+@media only screen and (max-width: 992px) {
+    .footer-bottom-desc {
+        font-size: 12px;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .footer-logo img {
+        width: 150px !important;
+        height: auto;
+    }
+
+    .footer-bottom {
+        display: block;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .footer-links a{
+        margin-left: 0;
+    }
+
+    .footer-div {
+        margin-top: 0;
+        padding-top: 0;
+    }
 }
