--- a/src/style/new.css
+++ b/src/style/new.css
@@ -5,6 +5,8 @@
 
 .news-card .card-banner {
     margin-block-end: 30px;
+    display: flex;
+    
 }
 
 .news-card .card-meta-list {
@@ -23,4 +25,24 @@
     text-transform: uppercase;
     letter-spacing: 1px;
 }
+
+.news-card .card-meta-item a.item-text {
+    transition: var(--transition);
+}
+
+.news-card .card-meta-item a.item-text:is(:hover, :focus) {
+    color: var(--marigold);
+}
+
+.news-card .card-title {
+    color: var(--quick-silver);
+    font-size: 1.5rem;
+    font-weight: 800;
+    text-transform: uppercase;
+    line-height: 1.2;
+    margin-block: 10px 15px;
+    transition: var(--transition);
+}
+
+
 
