--- a/src/style/new.css
+++ b/src/style/new.css
@@ -1,3 +1,10 @@
+.news {
+    background-color: white;
+    position: relative;
+    z-index: 1;
+}
+
+
 .news-list {
     display: grid;
     gap: 50px;
