--- a/src/style/footer.css
+++ b/src/style/footer.css
@@ -11,6 +11,18 @@
     height: auto;
 }
 
+.footer-icons svg {
+    color: white;
+    margin-bottom: 20px;
+    letter-spacing: 20px;
+    font-size: 1.6rem;
+    cursor: pointer;
+}
+
+.footer-icons svg:hover {
+    color: var(--marigold);
+}
+ 
 .footer-subtext {
     color: white;
     margin-top: 20px;
@@ -83,5 +95,9 @@
     .footer-div {
         margin-top: 0;
         padding-top: 0;
+    }
+
+    .footer-icons svg {
+        margin-bottom: 0;
     }
 }
