--- a/src/style/livestreaming.css
+++ b/src/style/livestreaming.css
@@ -22,6 +22,11 @@
     height: 72%;
 }
 
+.live-match-box {
+    position: relative;
+    margin-right: 20px;
+}
+
 .live-match-banner {
     padding-top: 100px;
     align-items: center;
@@ -40,4 +45,18 @@
      color: white;
      font-family: var(--font-Sans-Pro);
      font-weight: 700;
+}
+
+
+/* BreakPoints */
+
+@media only screen and (max-width: 768px){
+    .live-match-box2 {
+        height: 250px !important;
+        width: 380px !important;
+    }
+
+    .live-match-box {
+        right: 2%;
+    }
 }
