--- a/src/index.css
+++ b/src/index.css
@@ -76,6 +76,11 @@ ul {
   list-style: none;
 }
 
+li {
+  list-style: none;
+}
+
+
 body {
   background-color: var(--raisin-black-3);
   font-size: 1.6rem;
@@ -236,6 +241,32 @@ input {
 
 .card-banner{
   margin-block-end: 30px;
+}
+
+.btn {
+  margin-inline: auto;
+  color: var(--eerie-black-1);
+  font-size: 1.7rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  min-height: 55px;
+  padding-inline: 35px;
+}
+
+.btn::after {
+  content: '';
+  position: absolute;
+  top: 0; bottom: 0;
+  left: calc(100% + 8px);
+  width: 5px;
+  transform: skewX(-16deg) translateX(var(--translateX, 0));
+  background-color: var(--marigold);
+  transition: var(--transition);
+}
+
+
+.btn:is(:hover, :focus)::after {
+  --translateX: -13px;
 }
 
 /* .card-banner {
