--- a/src/style/store.css
+++ b/src/style/store.css
@@ -3,6 +3,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    background-attachment: fixed;
 }
 
 .section-store .has-scrollbar {
