--- a/src/style/teams.css
+++ b/src/style/teams.css
@@ -1,45 +1,109 @@
 .section-teams {
     background-color: var(--cultured-2);
+    background-image: url('../assets/2022/images/images-bg.jpeg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
 }
 
-.section-teams .section-title {
+
+.section-teams .section-title h2 {
     color: var(--xiketic);
     margin-block-end: 90px;
 }
 
-.section-teams .section-subtext {
-    color: var(--raisin-black-2);
+.section-teams .has-scrollbar {
+    gap: 30px;
+    overflow-x: hidden;
     align-items: center;
-    max-width: 83ch;
-    padding-bottom: 30px;
+    justify-content: center;
 }
 
-.section-teams .teams-card {
-    gap: 0;
+.game-imagebg {
+    border-radius: 20px;
+}
+
+.teams-game-card {
     position: relative;
+    box-shadow: var(--shadow-2);
+    border-radius: 20px;
 }
 
-.teams-card:is(.teams-card-content, .card-content-overlay){
+.teams-game-card :is(.card-content, .card-content-overlay) {
     position: absolute;
 }
 
-.teams-card .teams-card-content {
-    bottom: 0;
+.teams-game-card .card-content {
+    bottom: 30%;
     left: 0;
     right: 0;
-    padding: 30px 35px;
+    text-align: center;
     transition: var(--transition);
+    padding: 35px 25px;
 }
 
-.teams-card .card-content-overlay {
+.teams-game-card .card-content-title {
+    margin-block-end: 5px;
+}
+
+.teams-game-card .card-meta {
+    color: white;
+    font-size: 1.5rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    display: flex;
+    align-items: center;
+    gap: 4px;
+}
+
+.teams-game-card .card-content .card-meta {
+    color: var(--platinum);
+}
+
+
+.teams-game-card .card-content .card-icon {
+    color: var(--marigold);
+    font-size: 20px;
+}
+
+.teams-game-card .card-icon {
+    margin-block-end: 20px;
+}
+
+.teams-game-card .card-content-overlay .card-content-title {
+    color: var(--xiketic);
+}
+
+.teams-game-card:is(:hover, :focus-within) .card-content {
+    opacity: 0;
+}
+
+.teams-game-card:is(:hover, :focus-within) .card-content-overlay {
+    opacity: 1;
+}
+
+
+
+.teams-card-content .card-content-overlay {
     inset: 0;
     background-color: var(--marigold_75);
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     opacity: 0;
     transition: var(--transition);
 }
+
+.section-teams .section-subtext {
+    color: white;
+    align-items: center;
+    max-width: 83ch;
+    padding-bottom: 30px;
+}
+
+
 
 .teams-card .card-title-name {
     margin-block-end: 5px;
@@ -59,7 +123,22 @@
     color: var(--platinum);
 }
 
-.teams-card .card-logo-image {
-    margin-block-end: 20px;
-}
 
+
+/* BreakPoints */
+
+@media only screen and (max-width: 768px) {
+    .section-teams .has-scrollbar {
+        overflow-x: auto;
+        display: grid;
+        margin-left: -35px;
+    }
+
+    .section-teams .scrollbar-item {
+        min-width: 25%;
+        gap: 15px;
+        padding-top: 0;
+    }
+
+    
+}
