--- a/src/index.css
+++ b/src/index.css
@@ -42,8 +42,11 @@
 
   /* Transitions */
   --transition: 0.25s ease;
+  --transition-1: 0.15s ease-in-out;
   --cubic-out: cubic-bezier(0.33, 0.85, 0.4, 0.96);
 
+  /* Clip Path */
+  --polygon-1: polygon(90% 0, 100% 34%, 100% 100%, 10% 100%, 0 66%, 0 0)
 }
 
 
