--- a/src/index.css
+++ b/src/index.css
@@ -183,6 +183,10 @@ input {
   padding-top: 40px;
 }
 
+.btn-primary {
+  margin-inline: auto;
+}
+
 .card-banner {
   background-color: var(--light-gray-1);
   border-radius: 20px;
