--- a/src/style/teams.css
+++ b/src/style/teams.css
@@ -1,6 +1,6 @@
 .section-teams {
     background-color: var(--cultured-2);
-    background-image: url('../assets/2022/images/images-bg.jpeg');
+    background-image: url('../assets/2022/images/images-bg.webp');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
