--- a/src/style/livestreaming.css
+++ b/src/style/livestreaming.css
@@ -12,7 +12,7 @@
     left: 0;
     width: 100%;
     height: 57%;
-    background-image: url('../assets//2022//images/section-wrapper-bg.png');
+    background-image: url('../assets//2022/images/section-wrapper-bg.webp');
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
