--- a/src/style/store.css
+++ b/src/style/store.css
@@ -1,5 +1,5 @@
 .section-store {
-    background-image: url(../assets//2022/images/shop-bg.jpeg);
+    background-image: url(../assets//2022/images/shop-bg.webp);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
