--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   --font-montserrat :'Montserrat', sans-serif;
   --font-Rubik-Mono : 'Rubik Mono One', sans-serif;
   --font-Sans-Pro : 'Source Sans Pro', sans-serif;
+  --font-Inter : 'Inter', sans-serif;
 
   /* Colors */
   --rich-black-fogra-29_95: hsla(222, 18%, 11%, 0.95);
@@ -29,6 +30,8 @@
   --silver: hsl(0, 0%, 78%);
   --white: hsl(0, 0%, 100%);
   --jet: hsl(236, 13%, 23%);
+  --color-text-alert: #d72641;
+  --color-bg-alert: #fdeaec;
 
   /* Gradients */
   --gradient: radial-gradient(circle, hsl(250, 7%, 17%), hsl(250, 11%, 11%));
@@ -53,7 +56,7 @@
 /* Google fonts */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&family=Rubik+Mono+One&display=swap');
 @import url("https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@200;300;400;600;700;900&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap");
 
 /* Font Family CSS */
 /* Font-family: 'Montserrat', sans-serif */
