--- a/src/style/livestreaming.css
+++ b/src/style/livestreaming.css
@@ -56,22 +56,22 @@
 @media only screen and (max-width: 768px){
     .live-match-box2 {
         height: 250px !important;
-        width: 380px !important;
+        width: 365px !important;
     }
 
     .live-match-box {
-        right: 2%;
+        right: 0%;
+        margin-right: 0;
     }
+
 }
 
 
 @media only screen and (max-width: 330px) {
     .live-match-box2 {
         height: 170px !important;
-        width: 286px !important;
+        width: 305px !important;
     }
 
-    .live-match-box {
-        right: -4%;
-    }
+    
 }
