--- a/src/style/livestreaming.css
+++ b/src/style/livestreaming.css
@@ -50,13 +50,18 @@
      font-weight: 700;
 }
 
+.live-match-box2 {
+    height: auto !important;
+    width: 1980px !important;
+}
+
 
 /* BreakPoints */
 
-@media only screen and (max-width: 768px){
+@media only screen and (min-width: 768px){
     .live-match-box2 {
-        height: 250px !important;
-        width: 365px !important;
+        height: 395px !important;
+        width: 675px !important;
     }
 
     .live-match-box {
@@ -66,12 +71,92 @@
 
 }
 
+@media only screen and (min-width: 600px) {
+    /* .live-match-box2 {
+        height: 205px !important;
+        width: 345px !important;
+    } */
 
-@media only screen and (max-width: 330px) {
+    .live-match-box {
+        margin-right: 10px;
+        align-items: center;
+        justify-content: center;
+        margin-left: 10px;
+    }
+}
+
+
+@media only screen and (max-width: 260px) {
     .live-match-box2 {
-        height: 170px !important;
-        width: 305px !important;
+        height: 120px !important;
+        width: 215px !important;
+    }
+}
+
+@media only screen and (max-width: 575.98px) {
+    .live-match-box2 {
+        height: 210px !important;
+        width: 345px !important;
     }
 
-    
+    .live-match-box {
+        margin-right: 10px;
+        align-items: center;
+        justify-content: center;
+        margin-left: 10px;
+    }
+}
+
+@media screen and (min-width: 319px) {
+    .live-match-box2 {
+        width: 275px !important;
+        height: 155px !important;
+    }
+}
+
+@media screen and (min-width: 374.95px) {
+    .live-match-box2 {
+        height: 220px !important;
+        width: 330px !important;
+    }
+}
+
+@media screen and (min-width: 390px){
+    .live-match-box2 {
+        width: 345px !important;
+        height: 200px !important;
+    }
+} 
+
+@media screen and (min-width: 414px) {
+    .live-match-box2 {
+        height: 220px !important;
+        width: 370px !important;
+    }
+}
+
+
+
+
+@media screen and (min-width: 1024px) {
+    .live-match-box2 {
+        height: 510px !important;
+        width: 915px !important;
+    }
+}
+
+
+
+@media screen and (max-width: 1439){
+    .live-match-box2 {
+        width: 1275px !important;
+        height: 720px !important;
+    }
+}
+
+@media screen and (min-width: 1440px) {
+    .live-match-box2 {
+        width: 1275px !important;
+        height: 725px !important;
+    }
 }
