--- a/src/style/livestreaming.css
+++ b/src/style/livestreaming.css
@@ -52,18 +52,19 @@
 
 
 
+
 /* BreakPoints */
 
 @media screen and (max-width: 320px) {
     .live-match-box2 {
-        width: 275px !important;
+        width: 100%;
         height: 170px !important;
     }
 }
 
 @media screen and (max-width: 375px) {
     .live-match-box2 {
-        width: 350px !important;
+        width: 350px;
         height: 185px !important;
     }
 
@@ -74,7 +75,7 @@
 
 @media screen and (max-width: 400px) {
     .live-match-box2 {
-        width: 365px;
+        width: 100%;
         height: 205px;
     }
 
@@ -85,7 +86,29 @@
 
 @media screen and (max-width: 425px) {
     .live-match-box2 {
-        
+        height: 220px;
+        width: 100%;
+    }
+
+    .live-match-box {
+        margin-right: 0;
+    }
+}
+
+@media screen and (max-width: 768px) {
+    /* .live-match-box2 {
+        height: 400px;
+    } */
+
+    .live-match-box {
+        margin-right: 0px;
+    }
+}
+
+@media screen and (max-width: 1398px) {
+    .live-match-box2 {
+        width: 100%;
+        /* height: auto; */
     }
 }
 
