--- a/src/style/match.css
+++ b/src/style/match.css
@@ -23,6 +23,10 @@
     height: auto;
 }
 
+.match-teams img {
+    width: 100% !important;
+}
+
 
 .live-match-teams .teams-logo {
     max-width: max-content;
@@ -30,6 +34,7 @@
 
 .live-match-teams .teams-logo-2 {
     margin-inline-start: auto;
+    max-width: max-content;
 }
 
 .live-match-details {
@@ -72,7 +77,71 @@
 
 /* BreakPoints */
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1024px) {
+    .live-match-details {
+        margin-block: -225px;
+    }
+
+    .match-teams img {
+        height: 170px !important;
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .teams-logo, .teams-logo-2 {
+        height: 110px !important;
+    }
+
+    .match-teams img {
+        width: 90px !important;
+        height: 90px !important;
+    }
+
+    .live-match-subtext {
+        font-size: 0.4rem !important;
+        padding: 0px 5px !important;
+
+    }
+
+    .live-match-schedule {
+        margin-top: 3px !important;
+        font-size: 0.4rem !important;
+    }
+
+    .live-match-time {
+        margin-top: -6px !important;
+        font-size: 0.4rem !important;
+    }
+
+    .live-match-teams {
+        padding-block-start: 15px !important;
+    }
+}
+
+
+@media screen and (max-width: 375px) {
+    .match-teams img {
+        height: 100px !important;
+    }
+}
+
+@media screen and (max-width: 425px) {
+    .teams-logo, .teams-logo-2 {
+        height: 0px;
+    }
+
+    .match-teams img {
+        height: 90px !important;
+        width: 90px !important;
+    }
+}
+
+
+
+
+
+@media screen and (max-width: 768px) {
     .live-match-teams::after {
         font-size: 5rem;
 
@@ -88,10 +157,9 @@
         margin-block: 0;
     }
 
-    .match-teams img {
+    /* .match-teams img {
         width: 100px !important;
-        height: auto !important;
-    }
+    } */
 
     .live-match-subtext {
         font-size: 0.7rem;
@@ -110,7 +178,7 @@
 
     .teams-logo,
     .teams-logo-2 {
-        height: 120px !important;
+        height: 120px;
     }
 
     .teams-logo-2 {
@@ -125,14 +193,14 @@
     }
 
     .live-match-teams {
-        padding-block-start: 30px;
+        padding-block-start: 50px;
     }
 
 }
 
 @media only screen and (max-width: 575.98) {
     .live-match-teams .teams-logo-2 {
-        margin-inline-start: 0 !important;
+        margin-inline-start: auto;
     }
 
     .match-teams img {
@@ -155,6 +223,9 @@
     }
 }
 
-@media only screen and (min-width: 250px) {
-    
+
+@media screen and (max-width: 1390px) {
+    .match-teams img {
+        width: 100px !important;
+    }
 }
